--- a/App/requirements.txt
+++ b/App/requirements.txt
@@ -7,5 +7,4 @@ opencv_contrib_python==4.7.0.72
 opencv_python==4.7.0.72
 Pillow==9.5.0
 scikit_learn==1.2.2
-torch==2.0.1+cu121  # CUDA 12.1 version of PyTorch
-torchvision==0.15.2+cu121  # CUDA 12.1 version of Torchvision
+gdown==4.7.1
