--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "framer-motion": "^11.15.0",
+    "http-proxy-middleware": "^3.0.3",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.468.0",
     "react": "^18.3.1",
