--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -17,6 +17,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
+    "react-rewards": "^2.0.4",
     "react-router-dom": "^7.1.0",
     "react-webcam": "^7.2.0",
     "socket.io-client": "^4.8.1",
