--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -20,6 +20,7 @@
     "react-rewards": "^2.0.4",
     "react-router-dom": "^7.1.0",
     "react-webcam": "^7.2.0",
+    "recharts": "^2.15.3",
     "socket.io-client": "^4.8.1",
     "tailwind-scrollbar-hide": "^2.0.0"
   },
