--- a/.github/workflows/keep-awake.yml
+++ b/.github/workflows/keep-awake.yml
@@ -3,7 +3,7 @@ name: Keep Supabase Awake (Test)
 on:
   schedule:
     # Every 10 minutes
-    - cron: "*/10 * * * *"
+    - cron: "0 10 * * 1,4"
   workflow_dispatch:
 
 jobs:
